--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/Pictogrammers-Material-Black-mesa.512.png" type="image/x-icon">
     <title>Kauã Lucas</title>
@@ -28,16 +28,18 @@
         <!--Home-->
         <div id="inicio">
             <section id="texts">
-                <h1 id="name">My Name is<br>
-                    Kauã Lucas</h1>
-                <p id="desc">Estou me aventurando no mundo da programação. Estou em busca do máximo de conhecimento possível para me tornar um profissional experiente. Estou comprometido em desenvolver minhas habilidades e adquirir novas experiências para me tornar um programador de sucesso.
+                <h1 id="name" ><em>
+                    My Name is<br>
+                        Kauã Lucas
+                </em></h1>
+                <p id="desc">Estou me aventurando no mundo da programação. Estou em busca do máximo de conhecimento possível para me tornar um profissional experiente. Estou comprometido em desenvolver <strong>minhas habilidades</strong> e experiências para me tornar um programador de sucesso.
                     <br>
-                    <span>Aqui tem o meu <a href="https://www.linkedin.com/in/kaua-lucas-616569268/" target="_blank"rel="external">Linkedin</a> e meu <a href="https://github.com/esmaaisk" target="_blank"rel="external">Github</a></span>
+                    <span id="X">Aqui tem o meu <a href="https://www.linkedin.com/in/kaua-lucas-616569268/" target="_blank"rel="external">Linkedin</a> e meu <a href="https://github.com/esmaaisk" target="_blank"rel="external">Github</a></span>
                 </p>
 
             </section>
             <aside>
-                <div>
+                <div id="eu-1">
                     <img id="eu" src="imagens/eu2.png" alt="">
                 </div>
                 <div id="link-G_n">
@@ -66,8 +68,8 @@
                 <div style="display:flex;  margin: 2cm">
                     
                     <img src="imagens/codding.jpg" id="compt" alt="">
-                    <p id="me">Tenho 19 anos e venho estudando programação desde os 16 anos, embora não muito profundamente. Desde 2022, estou me dedicando ao máximo para aperfeiçoar meus conhecimentos.<br>
-                        Eu possuo habilidades autodidatas e uma capacidade inata de adaptação ao ambiente em que me encontro. Além disso, tenho aptidão para trabalhar de forma colaborativa em equipes, o que me permite contribuir efetivamente em projetos conjuntos.</p>
+                    <p id="me"><strong>Tenho 19 anos</strong> e venho estudando programação desde os 16 anos, embora não muito profundamente. Desde 2022, estou me dedicando ao máximo para aperfeiçoar meus conhecimentos.<br>
+                        Eu possuo habilidades <strong>autodidatas</strong> e uma capacidade inata de adaptação ao ambiente em que me encontro. Além disso, tenho aptidão para trabalhar de forma colaborativa em equipes, o que me permite contribuir efetivamente em projetos conjuntos.</p>
                 </div>
             </section>
             <!-- média-high -->
@@ -135,17 +137,17 @@ Eu possuo habilidades intermediárias no uso do Microsoft Excel, Word, PowerPoin
                     <div>
                         <video class="vidd"src="videos/portfolio01.mp4" height="190" controls></video>
                         <h2 style="color:black;text-align: center;">Portifolio 1.0</h2>
-                        <p style="margin-left: 0.5cm;"class="text_proj">Embora tenha sido um marco em meu portfólio, meu primeiro projeto infelizmente não apresentou a responsividade desejada. Contudo, aprendi muito com essa experiência e estou determinado(a) a aprimorar minhas habilidades e conhecimentos em design responsivo para alcançar resultados ainda mais satisfatórios em projetos futuros.</p>
+                        <p style="margin-left: 0.5cm;"class="text_proj">Embora tenha sido um marco em meu <strong>portfólio</strong>, meu primeiro projeto infelizmente não apresentou a responsividade desejada. Contudo, aprendi muito com essa experiência e estou determinado(a) a aprimorar minhas habilidades e conhecimentos em design responsivo para alcançar resultados ainda mais satisfatórios em projetos futuros.</p>
                     </div>
-                    <div>
-                        <video class="vidd"src="videos/pyautogui.mp4" height="190" controls></video>
+                    <div >
+                        <video id="vidd__"class="vidd"src="videos/pyautogui.mp4" height="190" controls></video>
                         <h2 style="color:black;text-align: center;">Análise de dados</h2>
-                        <p class="text_proj">Este projeto tem como objetivo utilizar a linguagem de programação Python para manipular diversos tipos de arquivos, incluindo o Excel, a fim de gerar uma ampla variedade de gráficos e planilhas sobre um determinado assunto. Com a utilização de bibliotecas especializadas, será possível automatizar tarefas repetitivas e obter resultados eficientes. Além disso, a análise de dados será realizada de forma rápida e confiável, permitindo a tomada de decisões baseadas em informações precisas e atualizadas.</p>
+                        <p id="text_proja"class="text_proj">Este projeto tem como objetivo utilizar a linguagem de programação <strong>Python</strong> para manipular diversos tipos de arquivos, incluindo o <strong>Excel</strong>, a fim de gerar uma ampla variedade de <strong>gráficos e planilhas</strong> sobre um determinado assunto. Com a utilização de bibliotecas especializadas, será possível <strong>automatizar tarefas repetitivas</strong> e obter resultados eficientes. Além disso, a <strong>análise de dados</strong> será realizada de forma rápida e confiável, permitindo a tomada de decisões baseadas em informações precisas e atualizadas.</p>
                     </div>
 
                     
                     <div>
-                        <div style="position:relative;left:2.2cm;">
+                        <div id ="aviso" >
                             <img style="height:190px" src="imagens/project.png" alt="">
                         </div>
                         <h2 style="color:black;text-align: center;">Em andamento!</h2>
