--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                     My Name is<br>
                         Kauã Lucas
                 </em></h1>
-                <p id="desc">Estou me aventurando no mundo da programação. Estou em busca do máximo de conhecimento possível para me tornar um profissional experiente. Estou comprometido em desenvolver <strong>minhas habilidades</strong> e experiências para me tornar um programador de sucesso.
+                <p id="desc">
+                    Estou me aventurando no mundo da programação. Estou em busca do máximo de conhecimento possível para me tornar um profissional experiente. Estou comprometido em desenvolver <strong>minhas habilidades</strong> e experiências para me tornar um programador de sucesso.
                     <br>
                     <span id="X">Aqui tem o meu <a href="https://www.linkedin.com/in/kaua-lucas-616569268/" target="_blank"rel="external">Linkedin</a> e meu <a href="https://github.com/esmaaisk" target="_blank"rel="external">Github</a></span>
                 </p>
@@ -115,8 +116,7 @@
                     <div id="code">
                         <img class="img-code" src="imagens/icones/conjunto-windows.png" alt="">
                         <p class="linguagens">
-                            
-Eu possuo habilidades intermediárias no uso do Microsoft Excel, Word, PowerPoint e Windows, o que me permite realizar diversas tarefas com facilidade e eficiência. Sou capaz de criar e editar documentos, planilhas e apresentações de forma organizada e profissional, utilizando recursos avançados para melhorar a qualidade do trabalho. 
+                            Eu possuo habilidades intermediárias no uso do Microsoft Excel, Word, PowerPoint e Windows, o que me permite realizar diversas tarefas com facilidade e eficiência. Sou capaz de criar e editar documentos, planilhas e apresentações de forma organizada e profissional, utilizando recursos avançados para melhorar a qualidade do trabalho. 
                         </p>
                     </div>
                 </div>
@@ -128,19 +128,20 @@ Eu possuo habilidades intermediárias no uso do Microsoft Excel, Word, PowerPoin
             <section>
                 <div id="proj"><!--190-->
                     <div>
-                        <video id="vid"src="videos/Gravar_2023_04_29_21_06_09_452.mp4" height="200" loop controls ></video>
+                        <iframe class="Yt" width="370" height="190" src="https://www.youtube.com/embed/SSj4P1TjMu8" title="Automação Web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                         <h2 style="color:black;text-align: center;">Automação Web</h2>
                         <p class="text_proj">Este é um código desenvolvido em <strong>Python</strong> que possibilita a desinscrição de múltiplos canais no <strong>YouTube</strong> de forma prática e eficiente. Com ele, é possível gerenciar uma grande quantidade de canais que não são mais relevantes para você, simplificando o processo de gerenciamento de sua conta no <strong>YouTube</strong>. O código é fácil de utilizar e pode ser facilmente adaptado às suas necessidades específicas. Com essa ferramenta, você pode economizar tempo e esforço ao realizar tarefas repetitivas e focar em outras atividades importantes em sua rotina.</p>
                     </div>
 
                     
                     <div>
-                        <video class="vidd"src="videos/portfolio01.mp4" height="190" controls></video>
+                        <iframe class="Yt"id="Yt_"  width="370" height="190" src="https://www.youtube.com/embed/SUlRT7J2Jy8" title="My portfólio 1.0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <h2 style="color:black;text-align: center;">Portifolio 1.0</h2>
                         <p style="margin-left: 0.5cm;"class="text_proj">Embora tenha sido um marco em meu <strong>portfólio</strong>, meu primeiro projeto infelizmente não apresentou a responsividade desejada. Contudo, aprendi muito com essa experiência e estou determinado(a) a aprimorar minhas habilidades e conhecimentos em design responsivo para alcançar resultados ainda mais satisfatórios em projetos futuros.</p>
                     </div>
                     <div >
-                        <video id="vidd__"class="vidd"src="videos/pyautogui.mp4" height="190" controls></video>
+                        <iframe class="Yt"width="370" height="190" src="https://www.youtube.com/embed/oKnHq0MrhDE" title="Análise De Dados" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <h2 style="color:black;text-align: center;">Análise de dados</h2>
                         <p id="text_proja"class="text_proj">Este projeto tem como objetivo utilizar a linguagem de programação <strong>Python</strong> para manipular diversos tipos de arquivos, incluindo o <strong>Excel</strong>, a fim de gerar uma ampla variedade de <strong>gráficos e planilhas</strong> sobre um determinado assunto. Com a utilização de bibliotecas especializadas, será possível <strong>automatizar tarefas repetitivas</strong> e obter resultados eficientes. Além disso, a <strong>análise de dados</strong> será realizada de forma rápida e confiável, permitindo a tomada de decisões baseadas em informações precisas e atualizadas.</p>
                     </div>
