--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <iframe class="Yt" width="370" height="190" src="https://www.youtube.com/embed/SSj4P1TjMu8" title="Automação Web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                         <h2 style="color:black;text-align: center;">Automação Web</h2>
-                        <p class="text_proj">Este é um código desenvolvido em <strong>Python</strong> que possibilita a desinscrição de múltiplos canais no <strong>YouTube</strong> de forma prática e eficiente. Com ele, é possível gerenciar uma grande quantidade de canais que não são mais relevantes para você, simplificando o processo de gerenciamento de sua conta no <strong>YouTube</strong>. O código é fácil de utilizar e pode ser facilmente adaptado às suas necessidades específicas. Com essa ferramenta, você pode economizar tempo e esforço ao realizar tarefas repetitivas e focar em outras atividades importantes em sua rotina.</p>
+                        <p id="pog"class="text_proj">Este é um código desenvolvido em <strong>Python</strong> que possibilita a desinscrição de múltiplos canais no <strong>YouTube</strong> de forma prática e eficiente. Com ele, é possível gerenciar uma grande quantidade de canais que não são mais relevantes para você, simplificando o processo de gerenciamento de sua conta no <strong>YouTube</strong>. O código é fácil de utilizar e pode ser facilmente adaptado às suas necessidades específicas. Com essa ferramenta, você pode economizar tempo e esforço ao realizar tarefas repetitivas e focar em outras atividades importantes em sua rotina.</p>
                     </div>
 
                     
