--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
             </section>
         </div>
     </main>
+    <div id="void">
+        <h1 style="color:red">Erro!!</h1>
+        <p>Este site não e compativel com seu dispositivo. Este site funciona melhor  com telas acima de 316 de largura.<br>
+        por favor tentar entrar, em computadores, celulares com larguras melhor ou TV.
+        <br><br>
+        Ou você ativar o modo computador, no canto direito superior nos três pontos da sua tela  e rolar para baixo ate achar essa opção.
+    </p>
+    </div>
 </body>
 
 </html>
