--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     
                     <img src="imagens/codding.jpg" id="compt" alt="">
                     <p id="me"><strong>Tenho 19 anos</strong> e venho estudando programação desde os 16 anos, embora não muito profundamente. Desde 2022, estou me dedicando ao máximo para aperfeiçoar meus conhecimentos.<br>
-                        Eu possuo habilidades <strong>autodidatas</strong> e uma capacidade inata de adaptação ao ambiente em que me encontro. Além disso, tenho aptidão para trabalhar de forma colaborativa em euiqeps, o que me permite contribuir efetivamente em projetos conjuntos.</p>
+                        Eu possuo habilidades <strong>autodidatas</strong> e uma capacidade inata de adaptação ao ambiente em que me encontro. Além disso, tenho aptidão para trabalhar de forma colaborativa em equipe, o que me permite contribuir efetivamente em projetos conjuntos.</p>
                 </div>
             </section>
             <!-- média-high -->
